--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@intervolga/optimize-cssnano-plugin": "^1.0.4",
     "autoprefixer": "7.1.6",
+    "axios": "^0.19.2",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -14,6 +15,7 @@
     "bootstrap": "^3.3.7",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "crypto-js": "^4.0.0",
     "css-loader": "^3.2.0",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.0.1",
@@ -38,6 +40,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
+    "react-native-crypto-js": "^1.0.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
